fixed issue with column names read on pandas

--- a/data-pipeline/scripts/data-discovery/data-discovery.ipynb
+++ b/data-pipeline/scripts/data-discovery/data-discovery.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,15 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'job'], dtype='object')\n",
+      "Index(['id', 'department'], dtype='object')\n",
+      "Index(['id', 'name', 'datetime', 'department_id', 'job_id'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "for data_file, schema in data_files.items():\n",
     "    logging.info(f'{data_file}')\n",
-    "    data = pd.read_csv(Path(data_path) / data_file, header=None)\n",
-    "    data.columns = schema # we set the columns to the schema provided\n",
-    "    get_data_range(data=data)\n"
+    "    data = pd.read_csv(Path(data_path) / data_file, header=None, names=schema)  # we set the columns to the schema provided\n",
+    "    print(data.columns)\n",
+    "    get_data_range(data=data)"
    ]
   }
  ],
