adding data ingestion script to bulk insert the csv file to mysql. Added working file for backup script.

--- a/data-pipeline/scripts/data-discovery/data-discovery.ipynb
+++ b/data-pipeline/scripts/data-discovery/data-discovery.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "# DATA PATH\n",
-    "data_path = config['PATHS']['data']"
+    "data_path = config['PATHS']['data']\n",
+    "data_sink = config['PATHS']['data_sink']"
    ]
   },
   {
@@ -121,22 +122,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['id', 'job'], dtype='object')\n",
-      "Index(['id', 'department'], dtype='object')\n",
-      "Index(['id', 'name', 'datetime', 'department_id', 'job_id'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for data_file, schema in data_files.items():\n",
     "    logging.info(f'{data_file}')\n",
     "    data = pd.read_csv(Path(data_path) / data_file, header=None, names=schema)  # we set the columns to the schema provided\n",
-    "    print(data.columns)\n",
+    "    data.to_csv(Path(data_sink) / data_file, index=False)\n",
     "    get_data_range(data=data)"
    ]
   }
